// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple example 1`] = `
"from pprint import pprint
from snaptrade_client import SnapTrade

snaptrade = SnapTrade(
    client_id="XXX",
    consumer_key="XXX"
)

response = snaptrade.api_status.check()
pprint(response.body)"
`;

exports[`simple parameters example 1`] = `
"from pprint import pprint
from snaptrade_client import SnapTrade

snaptrade = SnapTrade(
    client_id="XXX",
    consumer_key="XXX"
)

response = snaptrade.authentication.register_snap_trade_user(
    user_id="321"
)
pprint(response.body)"
`;
